# xarm6

./: Description_kr.md
.docker/: gui-docker
xarm_api/include/xarm_api/: xarm_msgs.h  xarm_ros_client.h
xarm_api/src/: xarm_driver_node.cpp  xarm_ros_client.cpp
xarm_api/test/: test_xarm_ros_client.cpp
xarm_description/meshes/xarm6/visual/: Camera.stl
xarm_description/urdf/xarm6/: xarm6.urdf.xacro
xarm_moveit_config/launch/: _xarm_moveit_common_wo_rviz.launch.py  _xarm_moveit_realmove_wo_rviz.launch.py  xarm5_moveit_realmove.launch.py
xarm_moveit_config/srdf/: _xarm6_macro.srdf.xacro
xarm_msgs/: CMakeLists.txt
xarm_msgs/msg/: RobotMsg.msg
xarm_msgs/srv/: SetInt16Str.srv
xarm_network/: CMakeLists.txt  package.xml
xarm_network/config/: xarm_config.yaml
xarm_network/launch/: xarm_register.launch.py
xarm_network/src/: xarm_camera_socket.cpp  xarm_http_client.cpp  xarm_http_server.cpp  xarm_mqtt_pub.cpp  xarm_register.cpp
xarm_object/: CMakeLists.txt  package.xml
xarm_object/include/object/: xarm_object.h
xarm_object/launch/: add_object.launch.py  remove_object.launch.py
xarm_object/meshes/: desk.stl
xarm_object/src/: xarm_object.cpp
xarm_object/test/: add_attached_object.cpp  add_object.cpp  remove_attached_object.cpp  remove_object.cpp
xarm_planner/: CMakeLists.txt  package.xml  xarm_planner_node_record_joint.cpp  xarm_planner_record_joint.cpp  xarm_planner_record_joint.h
xarm_planner/include/xarm_planner/: xarm_planner.h
xarm_planner/launch/: my_xarm6_planner_realmove.launch.py  my_xarm6_planner_realmove.launch_1.py  test_xarm_planner_api_pose.launch.py  xarm6_planner_realmove_wo_rviz.launch.py
xarm_planner/src/: xarm_planner.cpp  xarm_planner_node.cpp
xarm_sdk/cxx/src/xarm/core/debug/: debug_print.cc
xarm_sdk/cxx/src/xarm/core/port/: ser.cc
xarm_sdk/cxx/src/xarm/wrapper/: xarm_gpio.cc
